--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "vite": "^5.4.10"
   },
   "scripts": {
-    "build": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --minify",
+    "build": "vite build",
+    "dev": "vite",
     "watch": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --watch"
   }
 }
