--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "build": "vite build",
     "dev": "vite",
     "watch": "tailwindcss -i ./src/styles/tailwind.css -o ./dist/styles.css --watch"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
