--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10"
+    "tailwindcss": "^3.4.14"
   },
   "scripts": {
     "build": "vite build",
